# -DCMAKE_HOST_SYSTEM_PROCESSOR=x86_64 -DCMAKE_SYSTEM_PROCESSOR=x86_64 set(CMAKE_OSX_ARCHITECTURES "x86_64")
cmake_minimum_required(VERSION 3.22)
project(mao)

set(CMAKE_CXX_STANDARD 23)

set(CMAKE_HOST_SYSTEM_PROCESSOR "x86_64")
set(CMAKE_SYSTEM_PROCESSOR "x86_64")
set(CMAKE_OSX_ARCHITECTURES "x86_64")

# 设置调试版本后缀
set(CMAKE_DEBUG_POSTFIX "_d")

# 设置路径
set(THIRD_PARTY ${CMAKE_SOURCE_DIR}/3rd_party)
set(SOURCE_DIR ${CMAKE_SOURCE_DIR}/src)
set(TEST_DIR ${CMAKE_SOURCE_DIR}/test)
set(OUT_DIR ${CMAKE_SOURCE_DIR}/bin/${CMAKE_BUILD_TYPE})

# 设置输出路径
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${OUT_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${OUT_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${OUT_DIR}/lib)
set(CMAKE_INSTALL_BINDIR ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
set(CMAKE_INSTALL_LIBDIR ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})

message("++++ Set Runtime Out Dir: ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
message("++++ Set Library Out Dir: ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}")
message("++++ Set Archive Out Dir: ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}")
message("++++ Set Bin Install Out Dir: ${CMAKE_INSTALL_BINDIR}")
message("++++ Set Lib Install Out Dir: ${CMAKE_INSTALL_LIBDIR}")

add_subdirectory(src)
add_subdirectory(test)
